--- a/kargo/promotiontask.yaml
+++ b/kargo/promotiontask.yaml
@@ -6,9 +6,9 @@ metadata:
 spec:
   vars:
   - name: image
-    value: ghcr.io/akuity/guestbook
+    value: ghcr.io/yiran0427/guestbook
   - name: repoURL
-    value: https://github.com/akuity/kargo-helm.git
+    value: https://github.com/yiran0427/kargo-helm.git
   - name: branch
     value: main
   - name: envPath
