--- a/charts/guestbook/values.yaml
+++ b/charts/guestbook/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: ghcr.io/akuity/guestbook
+  repository: ghcr.io/yiran0427/guestbook
   pullPolicy: IfNotPresent
   tag: latest
 
