--- a/kargo/warehouse.yaml
+++ b/kargo/warehouse.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   subscriptions:
   - image:
-      repoURL: ghcr.io/akuity/guestbook
+      repoURL: ghcr.io/yiran0427/guestbook
       imageSelectionStrategy: SemVer
 
 ---
@@ -21,6 +21,6 @@ spec:
       branch: main
       commitSelectionStrategy: NewestFromBranch
       discoveryLimit: 20
-      repoURL: https://github.com/akuity/kargo-helm.git
+      repoURL: https://github.com/yiran0427/kargo-helm.git
       includePaths:
       - base/feature-flags.yaml
